tests/errors/orphan-done.expect
---CODE---
1
---STDERR---
Error: tests/errors/orphan-done.futil
16 |      one[done] = r.done;
   |      ^^^^^^^^^^^^^^^^^^^ Malformed Structure: Group `two` refers to the done condition of another group (`one`)

tests/errors/orphan-done.futil
17 |      two[done] = r.done;
   |      ^^^^^^^^^^^^^^^^^^^ Malformed Structure: Group `two` has multiple done conditions
